--- a/poc/conf/tekton/git-access/secret.yaml
+++ b/poc/conf/tekton/git-access/secret.yaml
@@ -8,7 +8,7 @@ metadata:
 type: kubernetes.io/basic-auth
 stringData:
   username: tekton
-  password: ## INSERT TOKEN HERE
+  password: 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
 ---
 apiVersion: v1
 kind: ServiceAccount
